2002-10-12  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scangobj.in: Make interface appear in the object hierarchy.

2002-10-11  Matthias Clasen  <maclas@gmx.de>

	* gtk-doc.xsl: use 'UTF-8', not UTF-8 for default.encoding, to
	make the encoding actually appear in the resulting HTML.

2002-10-09  James Henstridge  <james@daa.com.au>

	* gtkdoc-mkdb.in: set $doctype_header to "" for the SGML case, as
	we don't add a doctype to the beginning of SGML fragments.

Tue Sep 17 01:07:51 2002  Jonathan Blandford  <jrb@gnome.org>

	* gtk-doc.xsl: output the chunks in UTF-8 so other tools can use
	them.

2002-09-03  James Henstridge  <james@daa.com.au>

	* gtk-doc.xsl: turn on rendering of variablelists as tables, and
	set CSS rules to style .variablelist instead of .informaltable.

	* gtk-doc.dsl.in (variablelist): override the variablelist handler
	instead of the tgroups.

	* gtkdoc-mkdb.in (OutputStruct): use a <variablelist> for listing
	the field descriptions.
	(OutputEnum): same here.
	(OutputParamDescriptions): and here.

2002-08-12  James Henstridge  <james@daa.com.au>

	* gtk-doc.xsl: include devhelp.xsl, and call generate.devhelp when
	processing the docbook/xml input.

	* devhelp.xsl: new file, implements .devhelp file output.

2002-08-18  Havoc Pennington  <hp@pobox.com>

	* autogen.sh: hardcode aclocal-1.4/automake-1.4 so that users with
	both automake 1.6 and 1.4 installed get the right automake. Means
	compilation from CVS will now require the latest automake 1.4
	release, or manually creating symlinks called "automake-1.4" and
	"aclocal-1.4"

2002-08-08  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scangobj.in: Make sure blurbs end with a '.'

2002-08-08  James Henstridge  <james@daa.com.au>

	* gtk-doc.xsl: add a gtkdoc.bookname param, and include it in the
	index.sgml output (if not empty).

	* gtkdoc-mkhtml.in: only perform the sed operation if we are using
	Jade, and pass the module name as a parameter when using xsltproc.
