@@ -71,6 +71,8 @@ my $old_signals_filename = "$OUTPUT_DIR/$MODULE.signals";
 my $new_signals_filename = "$OUTPUT_DIR/$MODULE.signals.new";
 my $old_hierarchy_filename = "$OUTPUT_DIR/$MODULE.hierarchy";
 my $new_hierarchy_filename = "$OUTPUT_DIR/$MODULE.hierarchy.new";
+my $old_interfaces_filename = "$OUTPUT_DIR/$MODULE.interfaces";
+my $new_interfaces_filename = "$OUTPUT_DIR/$MODULE.interfaces.new";
 my $old_args_filename = "$OUTPUT_DIR/$MODULE.args";
 my $new_args_filename = "$OUTPUT_DIR/$MODULE.args.new";
 
@@ -136,6 +138,7 @@ print OUTPUT <<EOT;
 /* The output files */
 gchar *signals_filename = "$new_signals_filename";
 gchar *hierarchy_filename = "$new_hierarchy_filename";
+gchar *interfaces_filename = "$new_interfaces_filename";
 gchar *args_filename = "$new_args_filename";
 
 
@@ -157,6 +160,10 @@ static void output_hierarchy (FILE *fp,
 			      GType type,
 			      gint level);
 
+static void output_widget_interfaces ();
+static void output_interfaces (FILE *fp,
+			       GType type);
+
 static void output_args ();
 static void output_widget_args (FILE *fp, GType object_type);
 
@@ -169,6 +176,7 @@ main (int argc, char *argv[])
 
   output_signals ();
   output_widget_hierarchy ();
+  output_widget_interfaces ();
   output_args ();
 
   return 0;
@@ -679,7 +687,6 @@ lookup_signal_arg_names (const gchar * type, const gchar * signal_name)
   return NULL;
 }
 
-
 /* This outputs the hierarchy of all widgets which have been initialized,
    i.e. by calling their XXX_get_type() initialization function. */
 static void
@@ -717,9 +724,53 @@ output_hierarchy (FILE  *fp,
   fprintf (fp, "\\n");
 
   children = g_type_children (type, &n_children);
-  
+
   for (i=0; i < n_children; i++)
     output_hierarchy (fp, children[i], level + 1);
+
+  g_free (children);
+}
+
+static void output_widget_interfaces ()
+{
+  FILE *fp;
+
+  fp = fopen (interfaces_filename, "w");
+  if (fp == NULL)
+    {
+      g_warning ("Couldn't open output file: %s", interfaces_filename);
+      return;
+    }
+  output_interfaces (fp, G_TYPE_OBJECT);
+  fclose (fp);
+}
+
+static void
+output_interfaces (FILE  *fp,
+		   GType  type)
+{
+  guint i;
+  GType *children, *interfaces;
+  guint n_children, n_interfaces;
+
+  if (!type)
+    return;
+
+  interfaces = g_type_interfaces (type, &n_interfaces);
+
+  if (n_interfaces > 0)
+    {
+      fprintf (fp, g_type_name (type));
+      for (i=0; i < n_interfaces; i++)
+          fprintf (fp, " %s", g_type_name (interfaces[i]));
+      fprintf (fp, "\n");
+     }
+  g_free (interfaces);
+
+  children = g_type_children (type, &n_children);
+
+  for (i=0; i < n_children; i++)
+    output_interfaces (fp, children[i]);
 
   g_free (children);
 }
@@ -858,6 +909,7 @@ unlink "./$MODULE-scan.c", "./$o_file", "./$MODULE-scan";
 
 &UpdateFileIfChanged ($old_signals_filename, $new_signals_filename, 0);
 &UpdateFileIfChanged ($old_hierarchy_filename, $new_hierarchy_filename, 0);
+&UpdateFileIfChanged ($old_interfaces_filename, $new_interfaces_filename, 0);
 &UpdateFileIfChanged ($old_args_filename, $new_args_filename, 0);
 
 
